217_Set Is Loading

--- a/src/components/Meals/Meals/AvailableMeals.module.css
+++ b/src/components/Meals/Meals/AvailableMeals.module.css
@@ -4,7 +4,11 @@
     margin: 2rem auto;
     animation: meals-appear 1s ease-out forwards;
   }
-  
+.MealsLoading{
+  text-align: center;
+  color: white;
+  font-size: 70px
+}
   .meals ul {
     list-style: none;
     margin: 0;
